Thu Sep  7 08:33:45 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Correct spelling in Makefile.am: simplexpand -> simpleexpand.cc

Wed Sep 06 11:01:10 BST 2000 Olly Betts

	* omega: weren't distributing omega templates (d'oh!)

Tue Sep 05 10:44:28 BST 2000 Olly Betts

	* msearch: --multidb option no longer exists, so removed from
	  syntax message; complain if operator doesn't have 2 arguments;
	  Implicitly AND in boolean queries.
 
	* simpleindex: Setting sleepy_dir corrected to sleepycat_dir.

Mon Sep  4 17:44:23 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Add simple/simpleexpand.cc to nightly snapshots.

Wed Aug 23 15:19:00 BST 2000 Olly Betts

	* Updated to reflect merger of OmDatabase and OmDatabaseGroup.

Mon Aug 21 19:17:31 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Declare this to be version 0.3.0

Mon Aug 21 18:33:32 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Fix omega to reflect om_queryop -> OmQuery::op api changes.

Mon Aug 21 15:57:00 BST 2000 Olly Betts

	* Updated to reflect om_queryop -> OmQuery::op api changes.

Mon Aug 21 09:51:00 BST 2000 Olly Betts

	* omega: Changed remaining references from /usr/om to /usr/omega

Fri Aug 18 16:24:00 BST 2000 Olly Betts

	* OmSettings::get_value* -> OmSettings::get*
	  OmSettings::set_value -> OmSettings::set

Fri Aug 18 14:20:37 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Update simple examples to reflect change to OmSettings.

Thu Aug 17 10:33:00 BST 2000 Olly Betts

	* Updated examples to reflect OmMatchOptions/OmExpandOptions ->
	  OmSettings change.

Thu Aug 17 10:19:00 BST 2000 Olly Betts

	* Updated examples to reflect API changes

	* gui, msearch: removed slew of backend switches - now open database
	  with auto backend 

Thu Aug 10 12:00:35 BST 2000  Richard Boulton <richard.boulton@open.muscat.com>

	* Declare this to be version 0.2.1
